Fix weird comment spacing applied by formatter

--- a/sane.css
+++ b/sane.css
@@ -31,21 +31,20 @@ html:focus-within {
 }
 
 /* Sections
-   * ==========================================================================
-   * 1. Remove the margin.
-   * 2. Body should always fill the viewport.
-   * 3. Render with speed over precision (disables kerning and ligatures).
-   */
+ * ==========================================================================
+ * 1. Remove the margin.
+ * 2. Body should always fill the viewport.
+ * 3. Render with speed over precision (disables kerning and ligatures).
+ */
 body {
 	margin: 0; /* 1 */
 	min-height: 100vh; /* 2 */
 	text-rendering: optimizeSpeed; /* 3 */
 }
 
-/**
-   * Correct the font size and margin on `h1` elements within `section` and
-   * `article` contexts in Chrome, Firefox, and Safari.
-   */
+/* Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
 h1 {
 	/* 1 */
 	font-size: 2em;
@@ -66,20 +65,20 @@ dd {
 }
 
 /* Grouping content
-   * ==========================================================================
-   * 1. Add the correct box sizing in Firefox.
-   * 2. Show the overflow in Edge and IE.
-   */
+ * ==========================================================================
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
 hr {
 	box-sizing: content-box; /* 1 */
 	height: 0; /* 1 */
 	overflow: visible; /* 2 */
 }
 
-/**
-   * 1. Correct the inheritance and scaling of font size.
-   * 2. Correct the odd `em` font sizing.
-   */
+/*
+ * 1. Correct the inheritance and scaling of font size.
+ * 2. Correct the odd `em` font sizing.
+ */
 pre {
 	font-family: monospace, monospace; /* 1 */
 	font-size: 1em; /* 2 */
@@ -92,8 +91,9 @@ ol[role="list"] {
 }
 
 /* Text-level semantics
-   * ==========================================================================
-   * Anchor elements without class get default styles. */
+ * ==========================================================================
+ * Anchor elements without class get default styles.
+ */
 a:not([class]) {
 	text-decoration-skip-ink: auto;
 }
@@ -110,10 +110,10 @@ strong {
 	font-weight: bolder;
 }
 
-/**
-   * 1. Correct the inheritance and scaling of font size.
-   * 2. Correct the odd `em` font sizing.
-   */
+/*
+ * 1. Correct the inheritance and scaling of font size.
+ * 2. Correct the odd `em` font sizing.
+ */
 code,
 kbd,
 samp {
@@ -144,8 +144,9 @@ sup {
 }
 
 /* Multimedia
-  * ==========================================================================
-  * Remove gap between multimedia elements and bottom of their containers. */
+ * ==========================================================================
+ * Remove gap between multimedia elements and bottom of their containers.
+ */
 audio,
 canvas,
 iframe,
@@ -168,10 +169,10 @@ img:not([alt]) {
 }
 
 /* Forms
-* ==========================================================================
-* 1. Change the font styles.
-* 2. Remove the margin in Firefox and Safari.
-*/
+ * ==========================================================================
+ * 1. Change the font styles.
+ * 2. Remove the margin in Firefox and Safari.
+ */
 button,
 input,
 optgroup,
@@ -220,20 +221,18 @@ button:-moz-focusring,
 	outline: 1px dotted ButtonText;
 }
 
-/* 
- * 1. Remove default fieldset styles
- * 2. Correct the padding in Firefox. */
+/* Remove default fieldset styles */
 fieldset {
-  border: 0; /* 1 */
-	padding: 0.35em 0.75em 0.625em; /* 2 */
-  margin: 0; /* 1 */
+	border: 0;
+	padding: 0;
+	margin: 0;
 }
 
-/**
-   * 1. Correct the text wrapping in Edge and IE.
-   * 2. Remove the padding so developers are not caught out when they zero out
-   *    `fieldset` elements.
-   */
+/*
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements.
+ */
 legend {
 	box-sizing: border-box; /* 1 */
 	display: table; /* 1 */
@@ -253,10 +252,10 @@ progress {
 	height: auto;
 }
 
-/**
-   * 1. Correct the odd appearance in Chrome and Safari.
-   * 2. Correct the outline style in Safari.
-   */
+/*
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
 [type="search"] {
 	-webkit-appearance: textfield; /* 1 */
 	outline-offset: -2px; /* 2 */
@@ -269,21 +268,22 @@ progress {
 
 /* Allow only vertical resizing of textarea. */
 textarea {
-  resize: vertical;
+	resize: vertical;
 }
 
-/**
-   * 1. Correct the inability to style clickable types in iOS and Safari.
-   * 2. Change font properties to `inherit` in Safari.
-   */
+/*
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
 ::-webkit-file-upload-button {
 	-webkit-appearance: button; /* 1 */
 	font: inherit; /* 2 */
 }
 
 /* Interactive
-   * ==========================================================================
-   * Add the correct display in Edge, IE 10+, and Firefox. */
+ * ==========================================================================
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
 details {
 	display: block;
 }
@@ -294,8 +294,9 @@ summary {
 }
 
 /* Misc
-   * ==========================================================================
-   * Remove all animations and transitions for people that do not prefer them */
+ * ==========================================================================
+ * Remove all animations and transitions for people that do not prefer them
+ */
 @media (prefers-reduced-motion: reduce) {
 	* {
 		animation-duration: 0.01ms !important;
